# iroc-software

./: README.md  pyproject.toml  requirements.txt
config/: vehicle.example.yaml
docs/: ARDUPILOT_INTEGRATION.md  BRINGUP_CHECKLIST.md  CONSISTENCY_AUDIT.md  SAFETY_CASE.md  SYSTEM_DESIGN.md
src/iroc/: __init__.py  __main__.py  cli.py  config.py  diagnostics.py  logging_utils.py  storage.py  types.py
src/iroc/comms/: __init__.py  base_station.py  client.py  validation.py
src/iroc/flight/: __init__.py  controller.py
src/iroc/mission/: __init__.py  runner.py
src/iroc/navigation/: __init__.py  arena.py  map.py  planner.py
src/iroc/power/: __init__.py  monitor.py
src/iroc/safety/: __init__.py  monitor.py
src/iroc/vision/: __init__.py  camera.py  detector.py  downsample.py  features.py  geometry.py
tests/: test_base_station.py  test_boundary.py  test_detector_geometry.py  test_downsample.py  test_matcher.py  test_mission_dryrun.py  test_planner.py  test_power.py
tools/: generate_synthetic_dataset.py
